--- a/D3.html
+++ b/D3.html
@@ -7,135 +7,135 @@
     <script src=".\d3.v3.js"></script>
 </head>
 <body>
-    <div id="scatterPlot">
+    <div id="scatterPlot" >
 
     </div>
     <script type="text/javascript">
 
-            async function timed () {
+        async function timed() {
 
-                while (true) {
-
-                    
-
-
-                    // Scaterplot.
-                    var w = d3.select("body").node().getBoundingClientRect().width;
-                    var h = 500;
-                    var padding = 50;
-
-                    var svgMain = d3.select("div")
-                        .append("svg")
-                        .attr("width", w)
-                        .attr("height", h);
-
-
-
-                    // Perhaps time elapsed since creation vs total left in inventory?
-                    //Dynamic, random dataset
-                    var dataset = [];
-                    var numDataPoints = 10;
-                    var xRange = Math.random() * 1000;
-                    var yRange = Math.random() * 1000;
-                    for (var i = 0; i < numDataPoints; i++) {
-                        var newNumber1 = Math.round(Math.random() * xRange);
-                        var newNumber2 = Math.round(Math.random() * yRange);
-                        dataset.push([newNumber1, newNumber2]);
-                    }
-
-                    var xScale = d3.scale.linear()
-                        .domain([0, d3.max(dataset, function (d) { return d[0]; })])
-                        .range([padding, w - padding * 4]);
-
-                    var yScale = d3.scale.linear()
-                        .domain([0, d3.max(dataset, function (d) { return d[1]; })])
-                        .range([h - padding, padding]);
-
-                    var rScale = d3.scale.linear()
-                        .domain([0, d3.max(dataset, function (d) { return d[1]; })])
-                        .range([2, 10]);
+            while (true) {
 
 
 
 
-                
+                // Scaterplot.
+                var w = 250;
+                var h = 200;
+                var padding = 15;
 
-                   svgMain.selectAll("circle")
-                        .data(dataset)
-                        .enter()
-                        .append("circle")
-                        .on('mouseover', function () {
-
-                            console.log(this.childNodes);
-                        })
-                        .attr("cx", function (d) {
-                            return xScale(d[0]);
-                        })
-                        .attr("cy", function (d) {
-                            return yScale(d[1]);
-                        })
-                        .attr("r", function (d) {
-                            return rScale(d[1]);
-                        });
-
-                    svgMain.selectAll("text")
-                        .data(dataset)
-                        .enter()
-                        .append("text")
-                        .text(function (d) {
-                            return "[" + d[0] + "," + d[1] + "]";
-                        })
-                        .attr("class", "textPlots")
-                        .style("font-family", "sans-serif")
-                        .style("font-size", "11px")
-                        .style("fill", "white")
-                        .attr("id", function (d) {
-                            return d[0] + "_" + d[1];
-                        })
-                        .attr("x", function (d) {
-                            return xScale(d[0] + 8);
-                        })
-                        .attr("y", function (d) {
-                            return yScale(d[1]);
-                        });
+                var svgMain = d3.select("div")
+                    .append("svg")
+                    .attr("width", w)
+                    .attr("height", h);
 
 
 
-
-                    // X-Axis.
-                    var xAxis = d3.svg.axis()
-                        .scale(xScale)
-                        .orient("bottom");
-
-                    // Create.
-                    svgMain.append("g")
-                        .attr("class", "axis")
-                        .attr("transform", "translate(0," + (h - padding) + ")")
-                        .call(xAxis);
-
-                    // Y-Axis.
-                    var yAxis = d3.svg.axis()
-                        .scale(yScale)
-                        .orient("left")
-                        .ticks(5);
-
-                    // Create.
-                    svgMain.append("g")
-                        .attr("class", "axis")
-                        .attr("transform", "translate(" + padding + ",0)")
-                        .call(yAxis);
-
-                    await sleep(3000);
-                    d3.select("svg").remove();
+                // Perhaps time elapsed since creation vs total left in inventory?
+                //Dynamic, random dataset
+                var dataset = [];
+                var numDataPoints = 6;
+                var xRange = Math.random() * 100;
+                var yRange = Math.random() * 100;
+                for (var i = 0; i < numDataPoints; i++) {
+                    var newNumber1 = Math.round(Math.random() * xRange);
+                    var newNumber2 = Math.round(Math.random() * yRange);
+                    dataset.push([newNumber1, newNumber2]);
                 }
 
+                var xScale = d3.scale.linear()
+                    .domain([0, d3.max(dataset, function (d) { return d[0] / .75; })])
+                    .range([padding, w - padding]);
+
+                var yScale = d3.scale.linear()
+                    .domain([0, d3.max(dataset, function (d) { return d[1]; })])
+                    .range([h - padding, padding]);
+
+                var rScale = d3.scale.linear()
+                    .domain([0, d3.max(dataset, function (d) { return d[1]; })])
+                    .range([1, 6]);
+
+
+
+
+
+
+                svgMain.selectAll("circle")
+                    .data(dataset)
+                    .enter()
+                    .append("circle")
+                    .on('mouseover', function () {
+
+                        console.log(this.childNodes);
+                    })
+                    .attr("cx", function (d) {
+                        return xScale(d[0]);
+                    })
+                    .attr("cy", function (d) {
+                        return yScale(d[1]);
+                    })
+                    .attr("r", function (d) {
+                        return rScale(d[1]);
+                    });
+
+                svgMain.selectAll("text")
+                    .data(dataset)
+                    .enter()
+                    .append("text")
+                    .text(function (d) {
+                        return "[" + d[0] + "]";
+                    })
+                    .attr("class", "textPlots")
+                    .style("font-family", "sans-serif")
+                    .style("font-size", "11px")
+                    .style("fill", "#808080")
+                    .attr("id", function (d) {
+                        return d[0] + "_" + d[1];
+                    })
+                    .attr("x", function (d) {
+                        return xScale(d[0] + 8);
+                    })
+                    .attr("y", function (d) {
+                        return yScale(d[1]);
+                    });
+
+
+
+
+                // X-Axis.
+                var xAxis = d3.svg.axis()
+                    .scale(xScale)
+                    .orient("bottom");
+
+                // Create.
+                svgMain.append("g")
+                    .attr("class", "axis")
+                    .attr("transform", "translate(0," + (h - padding) + ")")
+                    .call(xAxis);
+
+                // Y-Axis.
+                var yAxis = d3.svg.axis()
+                    .scale(yScale)
+                    .orient("left")
+                    .ticks(5);
+
+                // Create.
+                svgMain.append("g")
+                    .attr("class", "axis")
+                    .attr("transform", "translate(" + padding + ",0)")
+                    .call(yAxis);
+
+                await sleep(3000);
+                d3.select("svg").remove();
             }
+
+        }
 
         function sleep(ms) {
             return new Promise(resolve => setTimeout(resolve, ms));
         }
 
-            timed();
+        timed();
     </script>
 </body>
 </html>
